--- a/docs/README
+++ b/docs/README
@@ -1,7 +1,9 @@
 HTML_Safe
 --------
-Version 1.3.5.
-http://pixel-apes.com/safehtml/
+Version 1.3.6
+
+The library is outdated and can only be used for historical reasons.
+
 --------
 
 This parser strips down all potentially dangerous content within HTML:
@@ -30,6 +32,8 @@ when SAFEHTML will be updated.
 --------
 Version history:
 --------
+1.3.6.
+ * Compatibility with modern versions of PHP
 1.3.5.
  * Two serious security flaws fixed: UTF-7 XSS and CSS comments handling.
 1.3.2.
